# velox

./: .env.demo.example  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup_wsl_codex.sh  system_prompt_velox.md
.claude/: settings.local.json
.codex/: instructions.md
.tmp.driveupload/: 341512  341514  341518  341520  341522  341524  341528  341530  341532  341536  341538  341540  341542  341544  341546  341550  341552  341554  341556  341558  341560  341562  341566  341568  341570  341574  341576  341578  341580  341584  341586  341588  341590  341592  341594  341596  341598  341600  341602  341606  (+578 more)
data/: escalation_matrix.yaml
docs/: admin_panel_domain_cutover.md  ai_telesekreter_discovery.md  ai_telesekreter_voice_lab_plan.md  chatlab_turkish_terminology.md  local_demo_environment.md  master_prompt_v2.md  production_deployment.md  reception_scope_prompt.md  role_permission_preview.html  special_occasion_policy.md
scripts/: chatlab_copy_smoke.sh  check_token.ps1  conversation_to_scenario.py  down_local_demo.sh  eval_cycle.py  fetch_waba_id.ps1  find_waba.ps1  fix_app_secret.ps1  generate_env.ps1  generate_fix_prompt.py  import_menu_pdfs.py  replay_structured_output_failures.py  resync_elektra_reservation_card.py  run_eval.py  trainer.py  up_local_demo.sh  update_env.ps1
skills/: anti_hallucination.md  coding_standards.md  error_handling.md  frontend_standards.md  observability.md  security_privacy.md  testing_qa.md  whatsapp_format.md
tasks/: 01_project_setup.md  02_database_models.md  03_config_system.md  04_elektraweb_adapter.md  05_whatsapp_integration.md  06_llm_engine.md  07_tool_implementations.md  08_escalation_engine.md  (+6 more)
(+373 files in other folders)
