[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velox"
version = "0.1.0"
description = "Velox (NexlumeAI) — WhatsApp AI Receptionist for Hotels"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "NexlumeAI"},
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "asyncpg>=0.30.0",

    # Cache / Session
    "redis[hiredis]>=5.2.0",

    # LLM
    "openai>=1.60.0",

    # HTTP Client (Elektraweb adapter)
    "httpx>=0.28.0",

    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # YAML/Config
    "pyyaml>=6.0.2",

    # Logging
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
    "qrcode>=8.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",

    # Phone validation
    "phonenumbers>=8.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velox"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "T20", "RET", "SIM", "ARG"]
ignore = ["S101", "COM812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
